# ans-project

./: .gitignore  1.57.0_0.crx  Dockerfile  README.md  draft.ipynb  plot_functional.ipynb  pyproject.toml  run.py
ViedoLists/: AFD1  Christian  Gun-type  Left  Pizza  SP  SVP  SVP1  TTT  Travel_italy  minecraft
ansp/: chrome.py  data.py  graph.py  yt.py
data/: plot.ipynb
networkgraph/: plot.ipynb
scripts/: YouTube.py  create_graph.py  script1.py  script2.py
select_runs/: run109.csv  run210.csv  run211.csv  run215.csv  run224.csv  run226.csv  run232.csv  run236.csv  run24.csv  run241.csv  run25.csv  run30.csv  run31.csv  run44.csv  run48.csv  run54.csv  run55.csv  run56.csv  run60.csv
select_runs/AFD/: run208.csv  run209.csv  run212.csv  run213.csv  run214.csv  run255.csv  run256.csv  run257.csv  run258.csv  run259.csv  run260.csv  run261.csv  run52.csv  run53.csv
select_runs/Gun-type/: run107.csv  run108.csv  run216.csv  run219.csv  run220.csv  run221.csv  run222.csv  run28.csv  run46.csv  run47.csv
select_runs/Left/: run225.csv  run227.csv  run228.csv  run229.csv  run230.csv  run231.csv  run32.csv  run58.csv  run59.csv
select_runs/Minecraft/: run234.csv  run235.csv  run237.csv  run238.csv  run239.csv  run240.csv  run242.csv  run243.csv
select_runs/SVP/: run108.csv  run109.csv  run57.csv  run74.csv  run75.csv  run77.csv  run78.csv  run79.csv
select_runs/TTT/: run245.csv  run246.csv  run248.csv  run250.csv  run251.csv  run252.csv  run253.csv
select_runs/Travel_Italy/: run100.csv  run101.csv  run104.csv  run105.csv  run94.csv  (+5 more)
statistics/: stats.ipynb
(+18 files in other folders)
